--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		 	</div>
 	 		<div class='col-md-4'>
 	 			<h3>
-					self.transport('hello')
+					self.transport('hi world')
 		 		</h3>
 	 		</div>
 		</div>
