adding copyright symbol with current year

--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 			  	<a class="contact-me-link" href="#contact-me">Contact Me</a>
 			  </li>
 			</ul>
-			<div>
-				<center>
-					&copy; Mukul Taneja - 2016 
+			<div class="copyright">
+				<center> 
 				</center>
 			</div>
 		</div>
@@ -250,7 +249,6 @@
 				<!-- footer section of web page -->
 				<div class="footer">
 					<footer class="text-center">
-						&copy; Mukul Taneja - 2016 
 					</footer>
 				</div>
 		</div>
