--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="shortcut icon" href="images/favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">	
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" media="screen and (min-device-width: 1200px)" href="css/style-site.css" />
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="bower_components/jquery-circle-progress/dist/circle-progress.js"></script>	
