adding code to incoporate 768px - 800px screen size

--- a/index.html
+++ b/index.html
@@ -5,31 +5,28 @@
 		<link rel="shortcut icon" href="images/favicon.png"/>
 		<meta name="viewport" content="width = device-width, initial-scale=1">	
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-		<link rel="stylesheet" media="screen and (min-device-width: 1200px)" href="css/dstyle.css" />
-		<link rel="stylesheet" media="screen and (max-device-width: 480px)" href="css/mstyle.css" />	
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<!-- page header-->
 		<div class="container-fluid">
 			<div class="row header">
-				<div class="col-md-3 col-xs-12">
+				<div class="col-md-3 col-md-6 col-xs-12">
 			 		<h2 class="text-center">
 						Mukul Taneja
 			 		</h2>
 			 	</div>
 			 	<div class="col-md-3 col-xs-0"></div>
-			 	<div class="col-md-6 col-xs-12">
-			 		<div class="links-div">
-					  	<a class="about-me-link" href="#about-me">About Me</a>
-					  	&nbsp;
-					  	<a class="skills-link" href="#skills">Skills</a>
-					  	&nbsp;
-					  	<a class="project-link" href="#projects">Projects</a>
-					  	&nbsp;
-					  	<a>Articles</a>
-					  	&nbsp;
-					  	<a class="contact-me-link" href="#contact-me">Contact Me</a>
-					</div>
+			 	<div class="col-md-6 col-sm-12 col-xs-12 links-div">
+				  	<a class="col-sm-3 about-me-link" href="#about-me">About Me</a>
+				  	&nbsp;
+				  	<a class="col-sm-2 skills-link" href="#skills">Skills</a>
+				  	&nbsp;
+				  	<a class="col-sm-2 project-link" href="#projects">Projects</a>
+				  	&nbsp;
+				  	<a class="col-sm-2">Articles</a>
+				  	&nbsp;
+				  	<a class="col-sm-3 contact-me-link" href="#contact-me">Contact Me</a>
 			 	</div>
 		 	</div>
 		</div>
