removing past conflicts

--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
 		<!-- page header-->
 		<div class="container-fluid">
 			<div class="row header">
-				<div class="col-md-3 col-xs-12">
+				<div class="col-md-3 col-md-6 col-xs-12">
 			 		<h2 class="text-center">
 						Mukul Taneja
 			 		</h2>
 			 	</div>
-			 	<div class="col-md-2 col-xs-0"></div>
-			 	<div class="col-md-7 col-sm-12 col-xs-12 links-div">
-				  	<a class="col-sm-3 about-me-link" href="#about-me">About Me</a>
+			 	<div class="col-md-1 col-xs-0"></div>
+			 	<div class="col-md-8 col-sm-12 col-xs-12 links-div">
+				  	<a class="col-md-2 col-sm-3 about-me-link" href="#about-me">About Me</a>
 				  	&nbsp;
-				  	<a class="col-sm-2 skills-link" href="#skills">Skills</a>
+				  	<a class="col-md-1 col-sm-2 skills-link" href="#skills">Skills</a>
 				  	&nbsp;
-				  	<a class="col-sm-2 project-link" href="#projects">Projects</a>
+				  	<a class="col-md-1 col-sm-2 project-link" href="#projects">Projects</a>
 				  	&nbsp;
-				  	<a class="col-sm-2">Articles</a>
+				  	<a class="col-md-1 col-sm-2">Articles</a>
 				  	&nbsp;
-				  	<a class="col-sm-3 contact-me-link" href="#contact-me">Contact Me</a>
+				  	<a class="col-md-3 col-sm-3 contact-me-link" href="#contact-me">Contact Me</a>
 			 	</div>
-			 		<div class="links-div">
 		 	</div>
-			 	</div>
-		<!-- Main container -->
-		<div class="container-fluid">
+		</div>
 		<!-- Main container -->
 		<div class="container-fluid">
 			<!-- home section of main page-->
@@ -76,7 +73,7 @@
 				</div>
 			</div>
 			<!-- about me section of main page-->
-			<div class="container" id="about-me">
+			<div id="about-me">
 				<div class="row">
 					<div class="about-me-heading">
 						<h2 class="text-center">
@@ -88,7 +85,7 @@
 				</div>
 			</div>
 			<!-- skills section of main page-->
-			<div class="container" id="skills">
+			<div id="skills">
 				<div class="row">
 					<div class="skill-heading">
 						<h2 class="text-center">
@@ -134,7 +131,7 @@
 				</div>
 			</div>
 			<!-- project section of main page-->
-			<div class="container" id="projects">
+			<div id="projects">
 				<div class="row">
 					<div class="project-heading">
 						<h2 class="text-center">
@@ -146,7 +143,7 @@
 				</div>
 			</div>
 			<!-- contact section of main page-->
-			<div class="container" id="contact-me">
+			<div id="contact-me">
 				<div class="row">
 					<div class="contact-me-heading">
 						<h2 class="text-center">
