adding code to incoporate with 320px device width

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 			 	</div>
 			 	<div class="col-md-1 col-xs-0"></div>
 			 	<div class="col-md-8 col-sm-12 col-xs-12 links-div">
-				  	<a class="col-md-2 col-sm-3 about-me-link" href="#about-me">About Me</a>
+				  	<a class="col-md-2 col-sm-3 col-xs-1 about-me-link" href="#about-me">About Me</a>
 				  	&nbsp;
-				  	<a class="col-md-1 col-sm-2 skills-link" href="#skills">Skills</a>
+				  	<a class="col-md-1 col-sm-2 col-xs-1 skills-link" href="#skills">Skills</a>
 				  	&nbsp;
-				  	<a class="col-md-1 col-sm-2 project-link" href="#projects">Projects</a>
+				  	<a class="col-md-1 col-sm-2 col-xs-1 project-link" href="#projects">Projects</a>
 				  	&nbsp;
-				  	<a class="col-md-1 col-sm-2">Articles</a>
+				  	<a class="col-md-1 col-sm-2 col-xs-1">Articles</a>
 				  	&nbsp;
-				  	<a class="col-md-3 col-sm-3 contact-me-link" href="#contact-me">Contact Me</a>
+				  	<a class="col-md-3 col-sm-3 col-xs-1 contact-me-link" href="#contact-me">Contact Me</a>
 			 	</div>
 		 	</div>
 		</div>
@@ -42,7 +42,7 @@
 								  <img src="images/mukul.png" alt="mukul" class="img-rounded img-responsive" />
 								  <br />
 								  <figcaption class="figure-caption tag-class">
-								  	<b>Associate Data Specialist <br />Gramener</b>
+								  	<b>Associate Data Specialist, <br />Gramener</b>
 								  </figcaption>
 							</figure>
 						</center>
@@ -152,7 +152,7 @@
 					</div>
 				</div>
 				<div class="row" id="contact-me-text">
-					<div class="col-md-2 col-xs-2 facebook">
+					<div class="col-md-2 col-sm-2 col-xs-3 facebook">
 						<center>
 							<figure class="figure">
 								<a href="https://www.facebook.com/Mac.theCreator" target="_blank">
@@ -165,7 +165,7 @@
 							</figure>
 						</center>
 					</div>
-					<div class="col-md-2 col-xs-2 linkedin">
+					<div class="col-md-2 col-sm-2 col-xs-3 linkedin">
 						<center>
 							<figure class="figure">
 								<a href="https://in.linkedin.com/in/mukul-taneja-855b1733" target="_blank">
@@ -178,7 +178,7 @@
 							</figure>
 						</center>
 					</div>
-					<div class="col-md-2 col-xs-2 gmail">
+					<div class="col-md-2 col-sm-2 col-xs-3 gmail">
 						<center>
 							<figure class="figure">
 								<a href="mailto:mukultaneja91@gmail.com">
@@ -191,7 +191,7 @@
 							</figure>
 						</center>
 					</div>
-					<div class="col-md-2 col-xs-2 twitter">
+					<div class="col-md-2 col-sm-2 col-xs-3 twitter">
 						<center>
 							<figure class="figure">
 								<a href="https://twitter.com/thecuriousmukul" target="_blank">
@@ -204,7 +204,7 @@
 							</figure>
 						</center>
 					</div>
-					<div class="col-md-2 col-xs-2 github">
+					<div class="col-md-2 col-sm-2 col-xs-3 github">
 						<center>
 							<figure class="figure">
 								<a href="https://github.com/mukultaneja" target="_blank">
