adding about me section to index page

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 				  	&nbsp;
 				  	<a class="col-md-1 col-sm-2 col-xs-1 skills-link" href="#skills">Skills</a>
 				  	&nbsp;
-				  	<a class="col-md-1 col-sm-2 col-xs-1 project-link" href="#projects">Projects</a>
+				  	<a class="col-md-1 col-sm-2 col-xs-1 project-link">Projects</a>
 				  	&nbsp;
-				  	<a class="col-md-1 col-sm-2 col-xs-1">Articles</a>
+				  	<a class="col-md-1 col-sm-2 col-xs-1 article-link">Articles</a>
 				  	&nbsp;
 				  	<a class="col-md-3 col-sm-3 col-xs-1 contact-me-link" href="#contact-me">Contact Me</a>
 			 	</div>
 		 	</div>
 		</div>
 		<!-- Main container -->
-		<div class="container-fluid">
+		<div class="container">
 			<!-- home section of main page-->
 			<div class="home">
 				<div class="row">
@@ -56,12 +56,7 @@
 							<blockquote>
 			  					<p>
 			  						<b>Mukul Taneja</b>, a person who loves technology and has a great amount of
-			  						passion to create relevant products for people. I believe I am not a software 
-			  						engineer but an artist who loves to paint and always ready to make some new 
-			  						architecture from vain. Currently I am working in a Data Science firm where I 
-			  						am trying to learn and play with data as we all know today data is the future 
-			  						of most of technology driven devices, so I am very keen for this field and 
-			  						trying to understand it very quickly.
+			  						passion to create relevant products for people. I believe I am an artist who loves to paint and always ready to make some new architecture from vain. Currently I am working in a Data Science firm where I am trying to learn and play with data, as we all know today data is the future of most of technology driven devices, so I am very keen for this field and trying to understand it very quickly.
 			  					</p>
 			  					<p>
 			  						I am releasing my personal website, where I will be sharing my latest workings and
@@ -82,6 +77,20 @@
 					</div>
 				</div>
 				<div class="row" id="about-me-text">
+					<blockquote>
+						<p class="text-center">
+							Mukul, a career oriented and a passionate 
+							programmer who always tries to learn new 
+							things and technologies.
+						</p>
+						<p>
+							Below tried to explain things with the help
+							of visualization. I have kept all things
+							which I possess as of now.
+						</p>
+					</blockquote>
+					<canvas height="1350" width="1130" id="viewport">
+					</canvas>
 				</div>
 			</div>
 			<!-- skills section of main page-->
@@ -140,6 +149,11 @@
 					</div>
 				</div>
 				<div class="row" id="project-text">
+					<blockquote>
+						<p class="text-center">
+							Yet to be updated.
+						</p>
+					</blockquote>
 				</div>
 			</div>
 			<!-- contact section of main page-->
@@ -233,6 +247,13 @@
 		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="bower_components/jquery-circle-progress/dist/circle-progress.js"></script>
+		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
+		<!--script type="text/javascript" src="js/scatterplot.js"></script-->
+		<script type="text/javascript" src="js/arbor.js"></script>
+		<script type="text/javascript" src="js/arbor-tween.js"></script>
+		<script type="text/javascript" src="js/graphics.js"></script>
+		<script type="text/javascript" src="js/renderer.js"></script>
+		<script type="text/javascript" src="js/site.js"></script>
 	</body>
 </html>
