--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="shortcut icon" href="images/favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">	
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 	<body>
 		<!-- page header-->
@@ -248,12 +248,10 @@
 		<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="bower_components/jquery-circle-progress/dist/circle-progress.js"></script>
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-		<script type="text/javascript" src="js/script.js"></script>
-		<!--script type="text/javascript" src="js/scatterplot.js"></script-->
+		<script type="text/javascript" src="js/script.min.js"></script>
 		<script type="text/javascript" src="js/arbor.js"></script>
 		<script type="text/javascript" src="js/arbor-tween.js"></script>
 		<script type="text/javascript" src="js/graphics.js"></script>
-		<script type="text/javascript" src="js/renderer.js"></script>
-		<script type="text/javascript" src="js/site.js"></script>
+		<script type="text/javascript" src="js/site.min.js"></script>
 	</body>
-</html>
+</html>		
