--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">	
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="css/style.min.css" />
+		{% seo %}
 	</head>
 	<body>
 		<!-- page header-->
