adding seo contents to web page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Mac-Home</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Mukul Taneja - Personal Website</title>
+		<meta name="copyright" content="This site belongs to Mukul Taneja and entirely based on his introduction to the world." />
+		<meta name="description" content="This site is related to Mukul Taneja and his introduction of himself.
+              This site describes what Mukul Taneja does, about Mukul Taneja,
+              about Mukul Taneja's technical skills, about Mukul Taneja's technical
+              projects and his contact details." />
+        <meta name="robots" content="index, follow" />
+        <meta name="author" content="Mukul Taneja" />
 		<link rel="shortcut icon" href="images/favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">	
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="css/style.min.css" />
-		{% seo %}
 	</head>
 	<body>
 		<!-- page header-->
