--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
 						<div class="col-md-12 col-xs-12">
 							<blockquote>
 			  					<p>
-			  						<b>Mukul Taneja</b>, a person who loves technology and has a great amount of
-			  						passion to create relevant products for people. I believe I am an artist who loves to paint and always ready to make some new architecture from vain. Currently I am working in a Data Science firm where I am trying to learn and play with data, as we all know today data is the future of most of technology driven devices, so I am very keen for this field and trying to understand it very quickly.
+			  						The inclination towards innovation and inquisitiveness about building new things outlined my passion since the beginning. Technology, has all the power the innovate, enhance and execute things and that very fact drove me towards it. I lately realized, that this is something I love and crave to explore more it each day.
+			  				    </p>
+			  					<p> 
+			  						Technology is like an ocean of ideas which are realized by tickling minds and I would thrive to contribute to this world seeking its power, making it powerful. I believe, it is not a curriculum or profession, but an art which keeps my thirst for it unquenched. Starting from the scratch, to building each block of anything new, gives me “Joy of Creation”.
 			  					</p>
 			  					<p>
-			  						I am releasing my personal website, where I will be sharing my latest workings and
-			  						learning with others so that others can also have an idea of new things.
-			  					</p> 
+									I created this website to make place for me to share my recent works and learnings and connect with the world in a better way.
+								</p>
 			  				</blockquote>
 						</div>
 					</div>
