upddating main container height

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 							programmer who always tries to learn new 
 							things and technologies.
 						</p>
-						<p>
+						<p class="text-center">
 							Below tried to explain things with the help
 							of visualization. I have kept all things
 							which I possess as of now.
 						</p>
 					</blockquote>
-					<canvas height="1350" width="1130" id="viewport">
+					<canvas id="viewport">
 					</canvas>
 				</div>
 			</div>
