--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
 		<script type="text/javascript" src="bower_components/jquery-circle-progress/dist/circle-progress.js"></script>
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="js/script.min.js"></script>
-		<script type="text/javascript" src="js/arbor.min.js"></script>
-		<script type="text/javascript" src="js/arbor-tween.min.js"></script>
-		<script type="text/javascript" src="js/graphics.min.js"></script>
+		<script type="text/javascript" src="js/arbor.js"></script>
+		<script type="text/javascript" src="js/arbor-tween.js"></script>
+		<script type="text/javascript" src="js/graphics.js"></script>
 		<script type="text/javascript" src="js/site.min.js"></script>
 	</body>
 </html>		
