--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               projects and his contact details." />
         <meta name="robots" content="index, follow" />
         <meta name="author" content="Mukul Taneja" />
-        <meta http-equiv="cache-control" content="private" />
+        <meta http-equiv="cache-control" content="public" />
         <meta http-equiv="expires" content="3600" />
 		<link rel="shortcut icon" href="images/favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">	
@@ -302,12 +302,12 @@
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="bower_components/jquery-circle-progress/dist/circle-progress.js"></script>
+		<script type="text/javascript" src="bower_components/jquery-circle-progress/dist/circle-progress.min.js"></script>
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="js/script.min.js"></script>
 		<script type="text/javascript" src="js/arbor.js"></script>
-		<script type="text/javascript" src="js/arbor-tween.js"></script>
-		<script type="text/javascript" src="js/graphics.js"></script>
+		<script type="text/javascript" src="js/arbor-tween.min.js"></script>
+		<script type="text/javascript" src="js/graphics.min.js"></script>
 		<script type="text/javascript" src="js/site.min.js"></script>
 	</body>
 </html>		
