--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
               projects and his contact details." />
         <meta name="robots" content="index, follow" />
         <meta name="author" content="Mukul Taneja" />
-        <meta http-equiv="cache-control" content="public" />
-        <meta http-equiv="expires" content="3600" />
+        <meta http-equiv="cache-control" content="max-age=86400" />
 		<link rel="shortcut icon" href="images/favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">	
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
