--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Mukul Taneja - Personal Website</title>
 		<meta name="copyright" content="This site belongs to Mukul Taneja and entirely based on his introduction to the world." />
-		<meta name="description" content="This site is related to Mukul Taneja and his introduction of himself.
-              This site describes what Mukul Taneja does, about Mukul Taneja,
-              about Mukul Taneja's technical skills, about Mukul Taneja's technical
-              projects and his contact details." />
+		<meta name="description" content="This site is related to Mukul Taneja and introduction of himself. This site describes about Mukul Taneja and his programming skills, primary interests
+		,his projects and his contact informations over internet." />
         <meta name="robots" content="index, follow" />
         <meta name="author" content="Mukul Taneja" />
         <meta http-equiv="cache-control" content="max-age=86400" />
