updating about me section text

--- a/index.html
+++ b/index.html
@@ -132,14 +132,9 @@
 				<div class="row" id="about-me-text">
 					<blockquote>
 						<p class="text-center">
-							Mukul, a career oriented and a passionate 
-							programmer who always tries to learn new 
-							things and technologies.
-						</p>
-						<p class="text-center">
-							Below tried to explain things with the help
-							of visualization. I have kept all things
-							which I possess as of now.
+							To make things work is such an exciting thing, and that is what I always want to play with. Thinking like a programmer and realizing the power of science and technology in every step is what I enjoy to the core. This introduces a desire to learn something new, more and make things magnificent. Simple and clear thoughts lead to great ideas, and I believe I have a long way to go. 
+ 
+							Here are projections of several areas of my life.
 						</p>
 					</blockquote>
 					<canvas id="viewport">
