updating about me section text

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 					<blockquote>
 						<p class="text-center">
 							To make things work is such an exciting thing, and that is what I always want to play with. Thinking like a programmer and realizing the power of science and technology in every step is what I enjoy to the core. This introduces a desire to learn something new, more and make things magnificent. Simple and clear thoughts lead to great ideas, and I believe I have a long way to go. 
- 
+ 						</p>
+ 						<p class="text-center">
 							Here are projections of several areas of my life.
 						</p>
 					</blockquote>
