adjustments for mobile website

--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
 							Here are projections of several areas of my life.
 						</p>
 					</blockquote>
-					<canvas id="viewport">
-					</canvas>
 				</div>
+				<canvas id="viewport"></canvas>
 			</div>
 			<!-- skills section of main page-->
 			<div id="skills">
