--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								  <img src="images/mukul.png" alt="mukul" class="img-rounded img-responsive" />
 								  <br />
 								  <figcaption class="figure-caption tag-class">
-								  	<b>Associate Data Specialist, <br />Gramener</b>
+								  	<b>Data Specialist, <br />Gramener</b>
 								  </figcaption>
 							</figure>
 						</center>
