--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#contact-me" class="contact-me-link">
-                        <span>Contact Me</span>
+                    <a href="#">
+                        <span>Resume</span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/maridlcrmn">Follow me</a>
+                    <a href="#contact-me" class="contact-me-link">
+                        <span>Contact Me</span>
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -78,6 +80,24 @@
                             <b>Data Specialist, Gramener</b>
                         </figcaption>
                     </center>
+                </div>
+            </div>
+            <div class="container">
+                <div class="col-md-12 col-xs-12" style="position: relative; top: 10px">
+                    <div class="col-md-7 col-xs-7"></div>
+                    <div class="col-md-5 col-xs-5" style="padding: 0px">
+                        <div class="col-md-4 col-xs-4">
+                            <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FMac.theCreator&width=63&height=65&layout=button&size=small&show_faces=true&appId" height="20" style="border:none;overflow:hidden;width: 70px;position: relative;left: 66%;" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/mukultaneja" aria-label="Follow @mukultaneja on GitHub">Follow @mukultaneja</a>
+                        </div>
+                        <div class="col-md-4 col-xs-4">
+                            <a href="https://twitter.com/thecuriousmukul" class="twitter-follow-button" data-show-count="false">Follow</a>
+                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- home section of main page-->
@@ -219,14 +239,13 @@
                 <footer class="text-center">
                 </footer>
             </div>
-            <div class="tooltip">
-            </div>
         </div>
     </div>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/vis.js"></script>
 </body>
