updating contact me / skills text

--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
 							Programming Skills
 						</h2>
                 </div>
+                <div class="col-md-12 col-xs-12">
+                    <blockquote>
+                        <p class="text-center">
+                            I started liking Computers / Programming after my high school. I would say before that I did not even know how to start a computer but got my first desktop in the first year of my college and after that I forgot how to close it :). I have worked upon multiple technologies and tools so far and here I am describing my ease level with the technologies I have worked so far.
+                        </p>
+                    </blockquote>
+                </div>
                 <div class="col-md-12 col-xs-12 skills-text">
                 </div>    
             </div>
@@ -154,6 +161,13 @@
                     <h2 class="text-center">
 							Contact Me
 						</h2>
+                </div>
+                <div class="col-md-12 col-xs-12 contact-me-text">
+                    <blockquote>
+                        <p class="text-center">
+                            Ideas are the coolest raw materials with which great things mark their existence. I would like to discuss and work with you for any of your bright ideas, and also try to add upon them. Also, writing you answering your queries or doubts would tickle my mind and refresh it. Do post your queries/doubts/suggestions on any of the following social media profiles of mine.
+                        </p>
+                    </blockquote> 
                 </div>
                 <div class="col-md-12 col-xs-12 contact-me-text">
                     <div class="col-md-2 col-xs-2 facebook">
